@@ -2,6 +2,8 @@ X X
     * Add Pickaxe/Shovel/Axe + Flame II = auto-smelt and light path
     * Add Chestplate + Sharpness = reflect damage
     * Change Hoe + Bane of Arthropods, now left-click starts storm, right-click stops
+    * Enhance Bow + Respiration = stapled arrows: try TNT, water, lava (spawn egg, potions...)
+    * Partial (warning: incomplete!) WorldGuard support
 
 2012-02-22  0.6.4
     * Add support for enabling/disabling effects in config.yml
